data/derived/comb/progs/unify/prog2327.ml.out
Characters 62-70:
  | h :: t -> h @ concat t;;
                  ^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
